--- a/style.css
+++ b/style.css
@@ -479,8 +479,8 @@ h2{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 }
-/*
-@media screen and (min-width: 480px){
+
+@media screen and (min-width: 260px) and (max-width: 480px){
     .cabecalho{
         background-color: #000000;
         color: #ffffff;
@@ -493,7 +493,7 @@ h2{
     }
     
     .cabecalho-imagem{
-        height: 56px;
+        height: 36px;
         gap: 32px;
     }
     .cabecalho-menu-item {
@@ -502,7 +502,7 @@ h2{
         padding: 10px;
         color: #ffffff;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 1.2em;
+        font-size: 0.8em;
     }
     
     a:visited{
@@ -513,7 +513,7 @@ h2{
     
     h2{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 12pt;
+        font-size: 10pt;
     }
     
     .conteudo{
@@ -543,11 +543,11 @@ h2{
     .conteudo-principal-escrito-titulo{
         font-family: 'limelight';
         font-weight: 400;
-        font-size: 80px
+        font-size: 48px
     }
     .conteudo-principal-escrito-paragrafo{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 14pt;
+        font-size: 12pt;
         font-weight: 300;
         display: flex;
         justify-content: center;       
@@ -562,20 +562,20 @@ h2{
     }
     
     .conteudo-secundario-imagem{
-        width: 463px;
-        height: 600px;
-        border-radius: 150px;
+        width: 263px;
+        height: 400px;
+        border-radius: 100px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: right;
-        padding: 50px 0px 0px 0px;
+        padding: 25px 25px 25px 25px;
     }
     
     .conteudo-secundario-escrito{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 11pt;
-        padding: 20px 100px 0px 100px;
+        padding: 20px 25px 0px 25px;
         border-top: 0.4px solid #000000;
        
     
@@ -592,7 +592,7 @@ h2{
         flex-direction: row;
         justify-content: flex-start;
         gap: 10px;
-        padding: 0px 0px 10px 40px;
+        padding: 0px 0px 10px 2%;
     }
     .conteudo-terciario-logo{
         display: flex;
@@ -629,7 +629,7 @@ h2{
         background-color: #000000;
         color: #ffffff;
         text-align: center;
-        font-size: 11pt;
+        font-size: 10pt;
         padding: 10px 0px 20px 0px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
